Added layouts module

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,14 +9,14 @@
       "request": "launch",
       "type": "dart",
       "flutterMode": "debug",
-      "program": "${workspaceFolder}/src/lib/main.dart",
+      "program": "${workspaceFolder}/src/arrugas/lib/main.dart",
     },
     {
       "name": "release Arrugas",
       "request": "launch",
       "type": "dart",
       "flutterMode": "release",
-      "program": "${workspaceFolder}/src/lib/main.dart",
+      "program": "${workspaceFolder}/src/arrugas/lib/main.dart",
     },
   ]
 }
